Fix footer break on small screens

--- a/public/less/partials/layout-elements/_footer.less
+++ b/public/less/partials/layout-elements/_footer.less
@@ -40,9 +40,16 @@
     }
 
     @media (max-width: @screen-xs-min) {
+
         .go-top {
             display: none;
         }
+
+        .footer-inner {
+            white-space: nowrap;
+            font-size: 3.5vw;
+        }
+
     }
 
 }
